--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -126,6 +126,8 @@
   <msg key="1stEd">First edition</msg>
   <msg key="thisEd">This edition</msg>
   <msg key="extent">Extent, format</msg>
+  <msg key="partOfMultivol">Part of a multivolume work</msg>
+  
   <!--<msg key="dateOfOrigin">Year of publication (original source)</msg>-->
   <msg key="details">Catalogue Record</msg>
   <msg key="facsimiles">Facsimiles</msg>
