--- a/data/i18n/privacy_decl.xml
+++ b/data/i18n/privacy_decl.xml
@@ -96,7 +96,7 @@
                             <item xml:id="item-asdlsdkj4">Name der abgerufenen Datei bzw. Angebotsseite (URL),</item>
                             <item xml:id="item-asdlsdkj5">Datum und Uhrzeit des Zugriffs,</item>
                             <item xml:id="item-asdlsdkj6">Statusangaben (z.B. Fehlermeldungen),</item>
-                            <item xml:id="item-asdlsdkj7">in anonymisierter Form die IP-Adresse des Geräts, von dem die Anfrage abgeschickt wurde.</item>
+                            <item xml:id="item-asdlsdkj7">die IP-Adresse (möglicherweise, aber nicht zwingend in anonymisierter Form) des Geräts, von dem die Anfrage abgeschickt wurde.</item>
                         </list>
                         <p xml:id="p-sdklfjre">Wenn Sie sich in unserem Blog registrieren und dort 
                             Nachrichten bzw. Kommentare hinterlassen, 
@@ -108,10 +108,11 @@
                         </list>
                         <p xml:id="p-sdlkfdjsdf">Wenn Sie sich in unserer Mailingliste eintragen (s.u.) 
                             wird ebenfalls die Email-Adresse und, wenn angegeben, Ihr Name gespeichert.</p>
-                        <p xml:id="p-lkdjsfsfds">Diese Informationen werden für die technische Weiterentwicklung (z.B. Fehlerbehebung) 
+                        <p xml:id="p-lkdjsfsfds">Die oben genannten Informationen werden für die technische Weiterentwicklung (z.B. Fehlerbehebung) 
                             des Angebots und ggf. für sicherheitsrelevante Auswertungen genutzt. Es wird kein personenbezogenes 
-                            Nutzungsprofil erstellt, die Daten werden nicht an Dritte weitergegeben und die oben genannten 
-                            Protokolldateien werden spätestens nach Ablauf von 50 Tagen gelöscht.</p>
+                            Nutzungsprofil erstellt und die Daten werden nicht an Dritte weitergegeben. Spätestens
+                            nach 24 Stunden werden die Protokolldateien verschlüsselt und nach 30 Tagen 
+                            vollständig gelöscht.</p>
                         <p xml:id="p-sallkjsdfd">Die im Rahmen der Kommentare und Beiträge auf unserem Blog angegebenen 
                             Daten werden ebenso wie die Anmeldeinformationen auf unserer Mailingliste 
                             von uns bis zum Widerspruch der Nutzer dauerhaft gespeichert. 
@@ -121,12 +122,10 @@
                         <head xml:id="head-lkjdgdgff">Wir wollen wissen, wer unser Angebot stört oder angreift</head>
                         <p xml:id="p-lsdkjfsfds">Wir behalten uns vor, auf Grundlage unserer berechtigten Interessen 
                             gem. Art. 6 Abs. 1 lit. f. DSGVO, die Angaben der Nutzer zwecks Erkennung von 
-                            Angriffsversuchen und von Spam-Kommentaren im Blog zu verarbeiten. Außerdem kann bei direkten Angriffsversuchen auf 
+                            Angriffsversuchen und von Spam-Kommentaren im Blog zu verarbeiten. Außerdem können im Falle von direkten Angriffsversuchen auf 
                             unsere Server, die keinen gewöhnlichen Aufruf unseres öffentlichen Internetangebots unter der Domain salamanca.school 
-                            darstellen, zusätzlich zu den <ref target="#div-know-de" type="url">oben genannten Daten</ref> die IP-Adresse des Angreifers 
-                            temporär und in nicht-anonymisierter Form protokolliert und ggf. für sicherheitsrelevante Analysen weiterverarbeitet werden. 
-                            Diese Daten werden jedoch spätestens nach Ablauf von 20 Tagen 
-                            gelöscht.</p> 
+                            darstellen, die <ref target="#div-know-de" type="url">oben genannten Daten</ref> im Rahmen ihrer
+                            Verfügbarkeit internen, sicherheitsrelevanten Analysen unterzogen werden.</p> 
                         <p xml:id="p-sdfjhdfsdf">Bei offensichtlich rechtswidrigen Aktivitäten werden wir die 
                             relevanten bei uns gespeicherten Daten ggf. mit Ermittlungsbehörden teilen. Eine Weitergabe an Dritte (ausgenommen 
                             Ermittlungsbehörden) ist jedoch ausgeschlossen.</p>
