Add missing i18n data for dict/lemma

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -242,6 +242,8 @@
   <msg key="copy">Kopieren</msg>
   
   <!-- div, milestone, element types for node index derivatives -->
+  <msg key="tei-div-dict">Index</msg>
+  <msg key="tei-div-lemma">Lemma</msg>
   <msg key="tei-div-additional">Addendum</msg>
   <msg key="tei-div-administrative">Administrativ</msg>
   <msg key="tei-div-article">Artikel</msg>
